--- a/lottery-web/src/main/resources/templates/cqssc.html
+++ b/lottery-web/src/main/resources/templates/cqssc.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>重庆时时彩</title>
+<link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/css/bootstrap.min.css">
 <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdn.staticfile.org/popper.js/1.12.5/umd/popper.min.js"></script>
@@ -21,6 +22,7 @@
 		<div th:replace="common/header::html"></div>
 		<div th:replace="common/ssc::html"></div>
 		<div th:replace="component/betting-order-details-modal::html"></div>
+		<div th:replace="component/tracking-number-modal::html"></div>
 	</div>
 </body>
 </html>
