完善追号功能,撤单功能

--- a/lottery-web/src/main/resources/templates/common/personal-navbar.html
+++ b/lottery-web/src/main/resources/templates/common/personal-navbar.html
@@ -38,13 +38,13 @@
 			<div class="col-sm-12">
 				<nav class="navbar navbar-expand-sm bg-light personal-navbar">
 					<ul class="navbar-nav">
-						<li class="nav-item" v-bind:class="{'selected-personal-nav-item': currentPathName == '/personal-center'}" v-on:click="navTo('/personal-center')"><a class="nav-link" href="#">个人中心</a></li>
-						<li class="nav-item" v-bind:class="{'selected-personal-nav-item': currentPathName == '/recharge'}" v-on:click="navTo('/recharge')"><a class="nav-link" href="#">线上充值</a></li>
-						<li class="nav-item" v-bind:class="{'selected-personal-nav-item': currentPathName == '/withdraw'}" v-on:click="navTo('/withdraw')"><a class="nav-link" href="#">线上提现</a></li>
-						<li class="nav-item" v-bind:class="{'selected-personal-nav-item': currentPathName == '/betting-record'}" v-on:click="navTo('/betting-record')"><a class=" nav-link" href="#">投注记录</a></li>
-						<li class="nav-item"><a class="nav-link" href="#">追号记录</a></li>
-						<li class="nav-item"><a class="nav-link" href="#">代理中心</a></li>
-						<li class="nav-item"><a class="nav-link" href="#">站内信</a></li>
+						<li class="nav-item" v-bind:class="{'selected-personal-nav-item': currentPathName == '/personal-center'}" v-on:click="navTo('/personal-center')"><a class="nav-link">个人中心</a></li>
+						<li class="nav-item" v-bind:class="{'selected-personal-nav-item': currentPathName == '/recharge'}" v-on:click="navTo('/recharge')"><a class="nav-link">线上充值</a></li>
+						<li class="nav-item" v-bind:class="{'selected-personal-nav-item': currentPathName == '/withdraw'}" v-on:click="navTo('/withdraw')"><a class="nav-link">线上提现</a></li>
+						<li class="nav-item" v-bind:class="{'selected-personal-nav-item': currentPathName == '/betting-record'}" v-on:click="navTo('/betting-record')"><a class=" nav-link">投注记录</a></li>
+						<li class="nav-item" v-bind:class="{'selected-personal-nav-item': currentPathName == '/tracking-number-record'}" v-on:click="navTo('/tracking-number-record')"><a class="nav-link">追号记录</a></li>
+						<li class="nav-item"><a class="nav-link">代理中心</a></li>
+						<li class="nav-item"><a class="nav-link">站内信</a></li>
 					</ul>
 				</nav>
 			</div>
